# example-bazel-containers-hasher

./: .envrc  BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  bld.sh  go.mod  go.sum  notes.txt
cmd/api/: BUILD.bazel
