bazel_dep(name = "aspect_bazel_lib", version = "1.31.1")
bazel_dep(name = "container_structure_test", version = "1.15.0")
bazel_dep(name = "gazelle", version = "0.31.0")
bazel_dep(name = "platforms", version = "0.0.5")
bazel_dep(name = "rules_oci", version = "1.0.0")
bazel_dep(name = "rules_pkg", version = "0.8.1")
bazel_dep(name = "rules_go", version = "0.39.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

go_deps.module(
    path = "github.com/google/go-cmp",
    sum = "h1:O2Tfq5qg4qc4AmwVlvv0oLiVAGB7enBSJ2x2DqQFi38=",
    version = "v0.5.9",
)

use_repo(go_deps, "com_github_google_go_cmp")

go_deps.module(
    path = "github.com/gorilla/mux",
    sum = "h1:i40aqfkR1h2SlN9hojwV5ZA91wcXFOvkdNIeFDP5koI=",
    version = "v1.8.0",
)

use_repo(go_deps, "com_github_gorilla_mux")


go_deps.module(
    path = "golang.org/x/crypto",
    sum = "h1:LKqV2xt9+kDzSTfOhx4FrkEBcMrAgHSYgzywV9zcGmM=",
    version = "v0.10.0",
)

use_repo(go_deps, "org_golang_x_crypto")

go_deps.module(
    path = "golang.org/x/net",
    sum = "h1:X2//UzNDwYmtCLn7To6G58Wr6f5ahEAQgKNzv9Y951M=",
    version = "v0.10.0",
)

use_repo(go_deps, "org_golang_x_net")

go_deps.module(
    path = "golang.org/x/sys",
    sum = "h1:KS/R3tvhPqvJvwcKfnBHJwwthS11LRhmM5D59eEXa0s=",
    version = "v0.9.0",
)

use_repo(go_deps, "org_golang_x_sys")

go_deps.module(
    path = "golang.org/x/term",
    sum = "h1:GRRCnKYhdQrD8kfRAdQ6Zcw1P0OcELxGLKJvtjVMZ28=",
    version = "v0.9.0",
)

use_repo(go_deps, "org_golang_x_term")

go_deps.module(
    path = "golang.org/x/text",
    sum = "h1:UpjohKhiEgNc0CSauXmwYftY1+LlaC75SJwh0SgCX58=",
    version = "v0.10.0",
)

use_repo(go_deps, "org_golang_x_text")


oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_base",
    digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)

use_repo(oci, "distroless_base")