load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_cross_binary")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/sharpred/example-bazel-containers-hasher/cmd/api",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gorilla_mux//:mux",
        "@org_golang_x_crypto//bcrypt",
    ],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "api_linux",
    target = ":api",
    platform = "@rules_go//go/toolchain:linux_amd64",
    visibility = ["//visibility:public"],
)


pkg_tar(
    name = "api_layer",
    srcs = [":api_linux"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/api_linux"],
    tars = [":api_layer"],
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["rhno.dev/hasher:latest"],
)
